--- a/UpdatedSidebar-master/package.json
+++ b/UpdatedSidebar-master/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@inovua/reactdatagrid-community": "^5.3.1",
     "@inovua/reactdatagrid-enterprise": "^5.3.1",
+    "@react-icons/all-files": "^4.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
